simplified installation, added examples

--- a/examples/openai-python-library/roberts_basaran_mod_for_windows.ipynb
+++ b/examples/openai-python-library/roberts_basaran_mod_for_windows.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Setting up a local LLM server\n",
-    "In this notebook, we will use [basaran](https://github.com/hyperonym/basaran) as a local LLM server."
+    "In this notebook, we will use [basaran](https://github.com/hyperonym/basaran) as a local LLM server and access it through the OpenAI API."
    ]
   },
   {
@@ -21,71 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07a9e59-13d7-4848-a128-22bfd2cfb308",
-   "metadata": {},
-   "source": [
-    "## Model download\n",
-    "To have a model to play with, we need to download a small one, e.g. [TinyLlama](https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v1.0).\n",
-    "We can use this code which will cache the model in the huggingface .cache folder:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "955ecce6-60f3-436a-ad79-77725e9bf88a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<|system|>\n",
-      "You are a friendly chatbot who always responds in the style of a pirate</s>\n",
-      "<|user|>\n",
-      "How many helicopters can a human eat in one sitting?</s>\n",
-      "<|assistant|>\n",
-      "As humans, we can eat a reasonable amount of food in one sitting, depending on our body weight and appetite. However, eating too much food at once can lead to stomach cramps, bloating, and other digestive issues. A reasonable amount for a human to eat in one sitting would be 4-5 servings, which is about 4-5 cups of food.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "from transformers import pipeline\n",
-    "\n",
-    "pipe = pipeline(\"text-generation\", model=\"TinyLlama/TinyLlama-1.1B-Chat-v1.0\", torch_dtype=torch.bfloat16, device_map=\"auto\")\n",
-    "\n",
-    "# We use the tokenizer's chat template to format each message - see https://huggingface.co/docs/transformers/main/en/chat_templating\n",
-    "messages = [\n",
-    "    {\n",
-    "        \"role\": \"system\",\n",
-    "        \"content\": \"You are a friendly chatbot who always responds in the style of a pirate\",\n",
-    "    },\n",
-    "    {\"role\": \"user\", \"content\": \"How many helicopters can a human eat in one sitting?\"},\n",
-    "]\n",
-    "prompt = pipe.tokenizer.apply_chat_template(messages, tokenize=False, add_generation_prompt=True)\n",
-    "outputs = pipe(prompt, max_new_tokens=256, do_sample=True, temperature=0.7, top_k=50, top_p=0.95)\n",
-    "print(outputs[0][\"generated_text\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "beea7952-ece1-4334-9714-782557bc7afb",
    "metadata": {},
    "source": [
     "## Starting the server\n",
-    "Replace `haase` in the following command with your username. Also check if the snapshot may have a different name. Then run this from the terminal (in a separate window):\n",
+    "Run this from the Windows CMD terminal (in a separate window):\n",
     "\n",
     "```\n",
-    "SET MODEL=C:\\Users\\haase\\.cache\\huggingface\\hub\\models--TinyLlama--TinyLlama-1.1B-Chat-v1.0\\snapshots\\77e23968eed12d195bd46c519aa679cc22a27ddc&& set PORT=80 && python -m basaran\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a7d2cba7-6d89-4918-9286-326dd8dadd42",
-   "metadata": {},
-   "source": [
-    "The server should say something like \n",
+    "SET MODEL=TinyLlama/TinyLlama-1.1B-Chat-v1.0&& SET PORT=80 && python -m basaran\n",
+    "```\n",
+    "\n",
+    "When executing this for the first time, the [TinyLlama](https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v1.0) model will be downloaded from the Huggingface hub and stored in a cache. When executing it the second time, the cached model will be used. When ready, the server should say something like \n",
     "```\n",
     "start listening on 127.0.0.1:80\n",
     "```"
@@ -102,52 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "655d00cc-74ed-4a8b-8ada-4e9d5ef5cc73",
+   "execution_count": 1,
+   "id": "c948aad8-29e0-49b8-a095-a271552d4fbd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"id\":\"cmpl-b0954aecfa6b351b807baa2b\",\"object\":\"text_completion\",\"created\":1705783287,\"model\":\"C:\\\\Users\\\\haase\\\\.cache\\\\huggingface\\\\hub\\\\models--TinyLlama--TinyLlama-1.1B-Chat-v1.0\\\\snapshots\\\\77e23968eed12d195bd46c519aa679cc22a27ddc\",\"choices\":[{\"text\":\"<|system|>\\n\",\"index\":0,\"logprobs\":null,\"finish_reason\":\"stop\"}],\"usage\":{\"prompt_tokens\":1,\"completion_tokens\":7,\"total_tokens\":8}}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "\n",
-      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "100     2    0     0  100     2      0      1  0:00:02  0:00:01  0:00:01     1\n",
-      "100     2    0     0    0     2      0      0 --:--:--  0:00:02 --:--:--     0\n",
-      "100     2    0     0    0     2      0      0 --:--:--  0:00:03 --:--:--     0\n",
-      "100     2    0     0    0     2      0      0 --:--:--  0:00:04 --:--:--     0\n",
-      "100   392  100   390    0     2     80      0  0:00:04  0:00:04 --:--:--    81\n",
-      "100   392  100   390    0     2     80      0  0:00:04  0:00:04 --:--:--   102\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "\n",
-      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0curl: (6) Could not resolve host: application\n",
-      "curl: (3) URL rejected: Port number was not a decimal number between 0 and 65535\n",
-      "curl: (3) URL rejected: Malformed input to a URL function\n",
-      "curl: (3) URL rejected: Port number was not a decimal number between 0 and 65535\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "\n",
-      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0curl: (6) Could not resolve host: true\n",
-      "curl: (3) unmatched close brace/bracket in URL position 1:\n",
-      "}'\n",
-      " ^\n"
+      "{\"id\":\"cmpl-bef9f82d195629ca0f7209b8\",\"object\":\"text_completion\",\"created\":1705829561,\"model\":\"TinyLlama/TinyLlama-1.1B-Chat-v1.0\",\"choices\":[{\"text\":\"arches in the glitter ball night in. Can you outline the steps for\",\"index\":0,\"logprobs\":null,\"finish_reason\":\"length\"}],\"usage\":{\"prompt_tokens\":1,\"completion_tokens\":16,\"total_tokens\":17}}\n"
      ]
     }
    ],
    "source": [
     "!curl http://127.0.0.1/v1/completions \\\n",
     "    -H 'Content-Type: application/json' \\\n",
-    "    -d '{ \"prompt\": \"once upon a time,\", \"echo\": true }'"
+    "    -d '{ \"prompt\": \"once upon a time,\", \"echo\": true }' -s"
    ]
   },
   {
@@ -161,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8b29c237-e5dc-4790-b66a-22dc87bc0143",
    "metadata": {},
    "outputs": [
@@ -171,7 +87,7 @@
        "'1.5.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,19 +98,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d3992fe9-e784-4d96-9bf3-f2e482d12e7f",
+   "cell_type": "markdown",
+   "id": "ba11cca4-4175-4eca-845c-2bdc6570d4b1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "client = openai.OpenAI()\n",
-    "client.base_url = 'http://127.0.0.1/v1'"
+    "We define a little helper function to access the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "c594fd3d-1e32-4b50-b49b-fc2bdc34eff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask(prompt, max_tokens=20, base_url='http://127.0.0.1/v1'):\n",
+    "    client = openai.OpenAI()\n",
+    "    client.base_url = base_url\n",
+    "\n",
+    "    response = client.completions.create(\n",
+    "        model=\"xyz\",\n",
+    "        prompt=prompt,\n",
+    "        max_tokens=max_tokens\n",
+    "    )\n",
+    "    return response.choices[0].text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18779a22-b59c-4e40-8c2a-5b4a282601ca",
+   "metadata": {},
+   "source": [
+    "### Story writing\n",
+    "We test if the model can complete a story."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "5b989e8d-a5af-40fe-a698-8c064613e693",
    "metadata": {},
    "outputs": [
@@ -202,32 +143,245 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " meet the animals.\n",
-      "\n",
-      "Act 2\n",
-      "As Max and Moritz are exploring the forest, Max meets a rabbit that needs help to escape a pack of wolves. Max goes to the forest's owner to help; and a tie to the owner appears in the form of a book. Max reads the story and learns the right way to help the rabbit to escape.\n",
-      "\n",
-      "Act 3\n",
-      "Max and Moritz are heading back to their village when, in an attempt to pass an obstacle, they accidentally take a long shortcut through a vibrant meadow. When they arrive, they find that an entire family has been wiped out because they all thought Max was going to eat them! Max and Moritz use their friendship to sweet-talk the family, and they make peace with them.\n",
-      "\n",
-      "Epilogue\n",
-      "A happy ending ensues where Max and Moritz are reunited, and the forest seems peaceful once again\n"
+      " retrieve an ancient magic object that belonged to a daunting guardian of the forest.\n",
+      "The\n"
      ]
     }
    ],
    "source": [
-    "response = client.completions.create(\n",
-    "    model=\"xyz\",\n",
-    "    prompt=\"Max and Moritz go in the forest to\",\n",
-    "    max_tokens=200\n",
-    ")\n",
-    "print(response.choices[0].text)"
+    "print(ask(\"Max and Moritz go in the forest to\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb716f57-c1dd-49d4-a3c1-20181f8c673d",
+   "metadata": {},
+   "source": [
+    "### Code generation\n",
+    "We test if the model can produce code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fbb2fe47-086b-40e8-ad33-3f5710570b97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    print(\"Hello, world!\")\n",
+      "\n",
+      "if __name__ == \"__main__\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ask(\"def print_hello_world():\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b84946d-985b-4c19-913b-1b407e93f607",
+   "metadata": {},
+   "source": [
+    "### Knowledge retrieval\n",
+    "We test if the model knows about computer science,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e1a816ac-6985-40a9-91f2-0c7392f7705e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " it can simulate human intelligence, with all of the identified cognitive processes, such as problem-sol\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ask(\"A software system passes the Turing test if\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e9f9d0d-7124-4216-9fe4-0f840cdd5647",
+   "metadata": {},
+   "source": [
+    "biology,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1b535c20-7501-48aa-a588-17cfa2b0edae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " their: Physical structure. Fascism—ana inversa). Discuss the fashionable\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ask(\"Animals and mushrooms are differentiated by\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a42d33a2-e867-480b-95d4-16801334bce9",
+   "metadata": {},
+   "source": [
+    "physics,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7c68b2da-7f73-43c8-967f-04067f15dc66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Distance/Time\n",
+      "Distance/(Time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ask(\"Distance divided by time is \"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7984670-c71a-4199-a7f2-b5fb5022b6fa",
+   "metadata": {},
+   "source": [
+    "cooking/baking, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "712ed807-36c1-4c61-8f6b-4ba059d3d944",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 and 1/2 cups warm water or milk. You can also add more bread fl\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ask(\"To make bread, you need flour, salt and \"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aba185f-2a9c-4230-96d5-4e2d0e759649",
+   "metadata": {},
+   "source": [
+    "geometry,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "32a3c2ad-7ecd-4262-a9e9-da09055234b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " the straight line distance between two given points in a vector space.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ask(\"The Euclidean distance is defined as\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32963b10-f283-4930-92e6-3e7c2ec39c2d",
+   "metadata": {},
+   "source": [
+    "geopolitics,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "781c4736-8a72-4b58-847e-785d2f73c23d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " estimated to be 50. A country without a single-state? How is technology driving the\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ask(\"The number of states in the US is\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "926459fc-238d-4072-9554-4a5c677d2577",
+   "metadata": {},
+   "source": [
+    "... and jokes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb2fe47-086b-40e8-ad33-3f5710570b97",
+   "id": "7559502c-6d15-4a7f-b33b-1c28d96b8aa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ask(\"A really funny joke is this one:\", max_tokens=200))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b49099e-7d3f-4b06-9f37-1817054d02af",
+   "metadata": {},
+   "source": [
+    "### Math\n",
+    "We test if the model can do math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1d60047-751d-41c2-9cf6-50bb8117734d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ask(\"1 + 2 / 2 =\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aedeb15-a589-42f0-9c97-9e6c100cc2d9",
    "metadata": {},
    "outputs": [],
    "source": []
